# pinocchio

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: docker.py  docker.toml  docker.yml  linux.yml  ros-ci.yml  ros_ci.yml
bindings/python/: CMakeLists.txt
bindings/python/pinocchio/: robot_wrapper.py
include/pinocchio/multibody/: fcl.hpp
src/: CMakeLists.txt  macros.hpp
src/parsers/sdf/: geometry.cpp
src/parsers/urdf/: geometry.cpp
src/spatial/: explog.hpp
unittest/: CMakeLists.txt  contact-models.cpp  sincos.cpp
unittest/casadi/: CMakeLists.txt
unittest/python/: CMakeLists.txt  rpy.py
