#
# Copyright (c) 2015-2023 CNRS INRIA
#

SET(${PROJECT_NAME}_PYTHON_TESTS
  rpy
  )

set(CTEST_OUTPUT_ON_FAILURE 1)
FOREACH(TEST ${${PROJECT_NAME}_PYTHON_TESTS})
  SET(TEST_NAME "test-py-${TEST}")
  ADD_PYTHON_UNIT_TEST(${TEST_NAME} "unittest/python/${TEST}.py" "bindings/python")
  ADD_WINDOWS_DLL_PATH_TO_TEST(${TEST_NAME})
  set_tests_properties(${NAME} PROPERTIES ENVIRONMENT "CTEST_OUTPUT_ON_FAILURE=1")
ENDFOREACH(TEST ${${PROJECT_NAME}_PYTHON_TESTS})

MAKE_DIRECTORY("${CMAKE_CURRENT_BINARY_DIR}/serialization-data")

IF(MEMORYCHECK_COMMAND AND MEMORYCHECK_COMMAND MATCHES ".*valgrind$")
  FOREACH(TEST ${${PROJECT_NAME}_PYTHON_MEMORYCHECK_TESTS})
    SET(TEST_NAME "test-py-memory-${TEST}")
    ADD_PYTHON_MEMORYCHECK_UNIT_TEST(${TEST_NAME}
      "unittest/python/${TEST}.py"
      "bindings/python")
    ADD_WINDOWS_DLL_PATH_TO_TEST(${TEST_NAME})
  ENDFOREACH()
ELSE()
  MESSAGE(STATUS "Valgrind not found, memory checks are disabled")
ENDIF()

ADD_SUBDIRECTORY(pybind11)
